<resources>
    <string name="app_name">Sweep</string>
    <string name="not_started">예정</string>
    <string name="progress">진행</string>
    <string name="finish">종료</string>
    <string name="no_data">데이터가 없습니다.</string>
    <string name="no_tinder">인기 메시지가 없습니다.</string>
    <string name="no_match">이 달은 경기가 없어요 :(</string>
    <string name="support">응원하기</string>
    <string name="mog">MOG 10</string>
    <string name="mvp_title">스윕러들의 MVP</string>
    <string name="match">경기</string>
    <string name="ranking">순위</string>
    <string name="mvp">MVP</string>
    <string name="team">팀</string>
    <string name="position">포지션</string>
    <string name="player">플레이어</string>
    <string name="team_ranking">팀 순위</string>
    <string name="win">승</string>
    <string name="lose">패</string>
    <string name="win_rate">승률</string>
    <string name="point">포인트</string>
    <string name="percentage">%d &#37;</string>
    <string name="full_name">%s %s</string>
    <string name="schedule">리그</string>
    <string name="history">히스토리</string>
    <string name="vs">vs</string>
    <string name="home">홈</string>
    <string name="login">로그인</string>
    <string name="team_select">팀선택</string>
    <string name="nickname">닉네임</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="latest_history">최근 메세지</string>
    <string name="best_history">명예의 전당</string>
    <string name="fragment_login_title">소통을 새롭고\n클린하게</string>
    <string name="fragment_login_sub_title">클린하게 소통하자, 스윕</string>
    <string name="fragment_nickname_title">닉네임을 입력해주세요</string>
    <string name="fragment_nickname_sub_title">한글과 영문으로 구성된 2~9자로 입력해주세요</string>
    <string name="fragment_nickname_waring_length">2자 이상 입력해주세요</string>
    <string name="fragment_nickname_waring_wrong">부적절한 단어가 포함된 닉네임은 사용할 수 없어요!</string>
    <string name="fragment_team_select_title">응원팀을 선택해 주세요</string>
    <string name="fragment_team_select_sub_title">팀 선택 시 한 달 동안 변경이\n불가능하니 신중히 선택해 주세요</string>
    <string name="fragment_team_select_after_select">나중에 선택할래요</string>
    <string name="fragment_sign_up_complete_title">%s님,\n가입을 환영합니다!</string>
    <string name="pass">흠</string>
    <string name="dislike">싫어요!</string>
    <string name="like">좋아요!</string>
    <string name="best">최고에요!</string>
    <string name="dialog_write_tinder_hint">메세지를 입력해주세요</string>
    <string name="dialog_report_tinder_nickname">불쾌감을 주거나 부적절한 닉네임 사용</string>
    <string name="dialog_report_tinder_player_team">악의적으로 선수 또는 팀을 비난</string>
    <string name="dialog_report_tinder_abuse">욕설 및 비방</string>
    <string name="report">신고하기</string>
    <string name="cancel">취소</string>
    <string name="count">%d개</string>
    <string name="pog_result">총 %d개의 투표가 진행되었어요.</string>
    <string name="filter">필터</string>
    <string name="fragment_filter_title">홈 화면에서 보고 싶은\n팀들을 선택해주세요</string>
    <string name="fragment_filter_sub_title">활성화된 팀들의 메세지만 받아 볼 수 있어요</string>
    <string name="total_vote">총 %d개의 투표가 진행되었어요</string>
    <string name="fragment_pog_vote_body">제일 잘 하고 있는 선수를 탭해주세요!</string>
    <string name="ok">확인</string>
    <string name="timer">00:0%d</string>
    <string name="input_complete">입력완료</string>
    <string name="start">시작하기</string>
    <string name="dialog_tutorial_body">메세지를 좌, 우, 상, 하로\n넘겨서 리액션을 보내보세요!</string>
    <string name="previous_minute">%d분 전</string>
    <string name="dialog_report_complete_title">신고가 정상적으로 접수되었습니다</string>
    <string name="no_game">경기가 없어요 :(</string>
    <string name="my_activity">나의 스윕 활동</string>
    <string name="my_tinder">작성한 메세지카드</string>
    <string name="my_like">받은 공감</string>
    <string name="my_player">관심 선수</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="setting">설정</string>
    <string name="policy">개인정보처리방침</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">회원탈퇴</string>
    <string name="worlds_2021">Worlds 2021</string>
    <string name="worlds_2021_day">2021. 10. 05 ~ 11. 06</string>
    <string name="policy_url">https://liberating-gauge-26e.notion.site/Sweep-a83d910fa13443c69358430c6a3787e5</string>
</resources>