<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        
        <LinearLayout
            android:id="@+id/ll_report_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_white_32dp"
            android:orientation="vertical"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/tv_report_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/dialog_report_tinder_nickname"
                android:textColor="@color/gray900"
                android:textSize="16sp" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray200" />
            
            <TextView
                android:id="@+id/tv_report_player_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/dialog_report_tinder_player_team"
                android:textColor="@color/gray900"
                android:textSize="16sp" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray200" />
            
            <TextView
                android:id="@+id/tv_report_abuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/dialog_report_tinder_abuse"
                android:textColor="@color/gray900"
                android:textSize="16sp" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_white_32dp"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"
            android:text="@string/report"
            android:textColor="@color/gray900"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_white_32dp"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"
            android:text="@string/cancel"
            android:textColor="@color/gray900"
            android:textSize="16sp" />
    </LinearLayout>
</layout>