<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_home">
    
    <fragment
        android:id="@+id/fragment_home"
        android:name="android.milestone.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
    
        <action
            android:id="@+id/action_fragment_mypage"
            app:destination="@id/fragment_mypage"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    
    <fragment
        android:id="@+id/fragment_schedule"
        android:name="android.milestone.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule">
        
        <action
            android:id="@+id/action_fragment_match_detail"
            app:destination="@id/fragment_match_detail"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    
    <fragment
        android:id="@+id/fragment_history"
        android:name="android.milestone.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
    
    </fragment>
    
    <fragment
        android:id="@+id/fragment_match_detail"
        android:name="android.milestone.ui.match_detail.MatchDetailFragment"
        tools:layout="@layout/fragment_match_detail">
        
        <argument
            android:name="matchId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
    
    <fragment
        android:id="@+id/fragment_mypage"
        android:name="android.milestone.ui.setting.MyPageFragment"
        tools:layout="@layout/fragment_mypage">
        
        <action
            android:id="@+id/action_fragment_edit_nickname"
            app:destination="@id/fragment_edit_nickname"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    
        <action
            android:id="@+id/action_fragment_setting"
            app:destination="@id/fragment_setting"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    
        <action
            android:id="@+id/action_fragment_preference"
            app:destination="@id/fragment_preference"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    
    <fragment
        android:id="@+id/fragment_my_players"
        android:name="android.milestone.ui.setting.MyPageFragment"
        tools:layout="@layout/fragment_mypage" />
    
    <fragment
        android:id="@+id/fragment_edit_nickname"
        android:name="android.milestone.ui.setting.EditNicknameFragment"
        tools:layout="@layout/fragment_edit_nickname" />
    
    <fragment
        android:id="@+id/fragment_setting"
        android:name="android.milestone.ui.setting.SettingFragment"
        tools:layout="@layout/fragment_setting" />
    
    <fragment
        android:id="@+id/fragment_preference"
        android:name="android.milestone.ui.setting.UserPreferenceFragment"
        tools:layout="@layout/fragment_user_preference" />
</navigation>